# ROS

./: README.md
Task1/: Task1(Answers)-Mohamed_Khaled.docx  Task1.docx
Task2/: Task2.txt
Task2/catkin_ws/devel/: .catkin  local_setup.sh  setup.sh
Task2/catkin_ws/devel/lib/first_pkg/: listener  publisher_node  subscriber_node  talker
Task2/catkin_ws/devel/lib/pkgconfig/: first_pkg.pc  second_pkg.pc  turtle_move_pkg.pc
Task2/catkin_ws/devel/lib/second_pkg/: publisher2_node  subscriber2_node
Task2/catkin_ws/devel/lib/turtle_move_pkg/: circle_publisher  circle_subscriber  line_publisher  line_subscriber
Task2/catkin_ws/src/first_pkg/: CMakeLists.txt  package.xml
Task2/catkin_ws/src/first_pkg/src/: publisher.cpp  subscriber.cpp
Task2/catkin_ws/src/second_pkg/: CMakeLists.txt  package.xml
Task2/catkin_ws/src/second_pkg/src/: publisher2.cpp  subscriber2.cpp
Task2/catkin_ws/src/turtle_move_pkg/: CMakeLists.txt
Task2/catkin_ws/src/turtle_move_pkg/src/: CirclePublisher.cpp  CircleSubscriber.cpp  LinePublisher.cpp  LineSubscriber.cpp
Task3/catkin_ws/devel/: .catkin  setup.sh
Task3/catkin_ws/devel/include/husky_move_pkg/: SetAngularVelocity.h  SetAngularVelocityRequest.h  SetAngularVelocityResponse.h  Trigger.h  TriggerRequest.h  TriggerResponse.h
Task3/catkin_ws/devel/lib/husky_move_pkg/: husky_control_node  husky_move_node  publisher_node  subscriber_node
Task3/catkin_ws/src/husky_move_pkg/: CMakeLists.txt
Task4/Class Environment 2/Class_Environment2/: model.config  model.sdf
Task4/Class Environment/Class/: model.config  model.sdf
Task4/Class World/: Class World
Task4/Four_Wheel/: model.config  model.sdf
Task4/Whole World/: WholeWorld
Task4/class Environment 4/class_Environment_4/: model.config  model.sdf
(+40 files in other folders)
